@@ -26,6 +26,21 @@ if ($uid = get_input_value('_uid', RCUBE_INPUT_GET))
   $headers = $IMAP->get_headers($uid);
   $charset = $headers->charset ? $headers->charset : $IMAP->default_charset;
   header("Content-Type: text/plain; charset={$charset}");
+
+  if (!empty($_GET['_save'])) {
+    $filename = ($headers->subject ? $headers->subject : 'roundcube') . '.eml';
+    $browser = new rcube_browser;
+    
+    if ($browser->ie && $browser->ver < 7)
+      $filename = rawurlencode(abbreviate_string($filename, 55));
+    else if ($browser->ie)
+      $filename = rawurlencode($filename);
+    else
+      $filename = addcslashes($filename, '"');
+      
+    header("Content-Disposition: attachment; filename=\"$filename\"");
+  }
+  
   $IMAP->print_raw_body($uid);
 }
 else
